--- a/src/components/MainButton/MainButton.module.css
+++ b/src/components/MainButton/MainButton.module.css
@@ -1,9 +1,11 @@
 .button {
-    font-family: 'Inter', sans-serif;
+    font-family: "Manrope", sans-serif;
     font-size: 16px;
     font-weight: 600;
-    padding: 12px 24px;
-    border-radius: 8px;
+    line-height: 125%;
+    color: #fff;
+
+    border-radius: 12px;
     border: none;
     cursor: pointer;
     transition: background-color 0.3s ease;
