--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 
   body,
   html {
-    font-family: 'Inter', sans-serif;
+    font-family: "Manrope", sans-serif;
     font-size: 16px;
     background-color: #F7F7F7;
     color: #101820;
