--- a/src/components/RentalForm/RentalForm.module.css
+++ b/src/components/RentalForm/RentalForm.module.css
@@ -50,6 +50,7 @@
     height: 44px;
 
     background: #3470ff;
+    color: white;
 
     font-family: "Manrope", sans-serif;
     font-weight: 600;
