--- a/src/index.css
+++ b/src/index.css
@@ -41,9 +41,7 @@
   button {
     cursor: pointer;
     font-family: inherit;
-    background-color: #4169E1;
-    color: #FFFFFF;
-    border-radius: 8px;
+     color: white;
 
     font-weight: 600;
     font-size: 16px;
